added hourly serial dataframe printing display.width had to be increased in order to make the printed table more readable

--- a/python/data.ipynb
+++ b/python/data.ipynb
@@ -2,13 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Hourly Serial Dataframe Table:\n",
+      "                        voltage  current    power   energy  frequency        pf\n",
+      "time                                                                           \n",
+      "2023-03-24 09:00:00  229.366857  173.078  22211.2   35.482  49.983938  0.559254\n",
+      "2023-03-24 10:00:00  229.855238   82.220  10803.8   61.800  49.975863  0.218998\n",
+      "2023-03-24 11:00:00  231.853554   25.034   3372.1   67.001  49.984601  0.063037\n",
+      "2023-03-24 12:00:00  230.269217   49.708   6638.1   67.137  49.972320  0.125431\n",
+      "2023-03-24 13:00:00  227.578949   48.878   6544.0   74.282  49.974352  0.125475\n",
+      "2023-03-24 14:00:00  225.894417   14.036   1851.2   79.170  49.982463  0.034805\n",
+      "2023-03-24 15:00:00  227.575731   19.050   2535.4   79.170  49.981938  0.047593\n",
+      "2023-03-24 16:00:00  229.204729   62.358   8256.4   82.856  49.999967  0.155445\n",
+      "2023-03-24 17:00:00  231.931461  110.914  14306.8   88.734  49.992118  0.284305\n",
+      "2023-03-24 18:00:00  233.829946  205.729  26835.2  112.581  49.988803  0.558150\n",
+      "2023-03-24 19:00:00  230.947808  143.189  19128.8  136.237  49.989522  0.381687\n",
+      "2023-03-24 20:00:00  228.469304    0.000      0.0  146.208  49.978037  0.000000\n",
+      "2023-03-24 21:00:00  226.716144   22.370   2936.6  146.136  49.991986  0.055786\n",
+      "2023-03-24 22:00:00  224.111706    6.002    778.4  146.184  49.988672  0.014290\n",
+      "2023-03-24 23:00:00  225.500033   29.896   3875.2  146.160  49.991494  0.072049\n",
+      "2023-03-25 00:00:00  226.362817   73.182   9353.0  117.528  49.977962  0.222360\n",
       "Average Value of Non Zero Values:\n",
       "voltage      228.742465\n",
       "current        0.036173\n",
@@ -80,11 +99,12 @@
     "        else:\n",
     "            texts[0].set_text(text_value + ' (nval averaged)')\n",
     "\n",
+    "pd.set_option('display.width', 1000)\n",
+    "\n",
+    "print(f\"Hourly Serial Dataframe Table:\\n{hourly_data}\\n\")\n",
     "\n",
     "average_value_non_zero = serial_data.apply(lambda x: x[x != 0].mean())\n",
-    "\n",
-    "print(\"Average Value of Non Zero Values:\")\n",
-    "print(average_value_non_zero)\n",
+    "print(f\"Average Value of Non Zero Values:\\n{average_value_non_zero}\")\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
