added total energy usage value

--- a/python/data.ipynb
+++ b/python/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,10 @@
       "energy         0.016814\n",
       "frequency     49.985152\n",
       "pf             0.570982\n",
-      "dtype: float64\n"
+      "dtype: float64\n",
+      "\n",
+      "Total Energy Usage with Sensor: 7704.615369980079 Wh\n",
+      "Total Energy Usage without Sensor: 25373.256669319177 Wh\n"
      ]
     },
     {
@@ -210,6 +213,7 @@
     "ax_ml_c_e = ml_c_e.plot(title='Correct Manual Lamp Energy Data')\n",
     "\n",
     "\n",
+    "\n",
     "# compare both correct energy data\n",
     "# comp = pd.DataFrame()\n",
     "# comp['manual'] = ml_c_e['power']\n",
@@ -217,6 +221,12 @@
     "# comp = pd.concat([sd_c_e, ml_c_e], axis=1)\n",
     "comp = pd.DataFrame({'manual': ml_c_e['power'], 'auto': sd_c_e['power']})\n",
     "comp.plot(title='Energy Usage Comparison in Watt-hour')\n",
+    "\n",
+    "\n",
+    "# printing out energy usages\n",
+    "print(f\"\\nTotal Energy Usage with Sensor: {comp['auto'].max()} Wh\")\n",
+    "print(f\"Total Energy Usage without Sensor: {comp['manual'].max()} Wh\")\n",
+    "\n",
     "\n",
     "# add units\n",
     "def s_data_legend_unit(text: str) -> Optional[str]:\n",
