added hourly_data csv

--- a/python/data.ipynb
+++ b/python/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -184,6 +184,7 @@
     "\n",
     "# printing out tables\n",
     "print(f\"Hourly Serial Dataframe Table:\\n{hourly_data}\\n\")\n",
+    "hourly_data.to_csv('./hourly_data.csv')\n",
     "\n",
     "average_value_non_zero = serial_data.apply(lambda x: x[x != 0].mean())\n",
     "print(f\"Average Value of Non Zero Values from Serial Data:\\n{average_value_non_zero}\")\n",
