--- a/python/data.ipynb
+++ b/python/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,8 @@
       "dtype: float64\n",
       "\n",
       "Total Energy Usage with Sensor: 7704.615369980079 Wh\n",
-      "Total Energy Usage without Sensor: 25373.256669319177 Wh\n"
+      "Total Energy Usage without Sensor: 25373.256669319177 Wh\n",
+      "Savings: 69.63489759950153 %\n"
      ]
     },
     {
@@ -227,6 +228,7 @@
     "# printing out energy usages\n",
     "print(f\"\\nTotal Energy Usage with Sensor: {comp['auto'].max()} Wh\")\n",
     "print(f\"Total Energy Usage without Sensor: {comp['manual'].max()} Wh\")\n",
+    "print(f\"Savings: {(1-comp['auto'].max()/comp['manual'].max()) * 100} %\")\n",
     "\n",
     "\n",
     "# add units\n",
